feat: implement glowing halo in search and friend profile
